--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ if ( MSVC )
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
 endif()
 
+
+#find dependencies
+find_package(Catch2 3 REQUIRED)
+
 #setup testing
 enable_testing()
 include_directories(include/)
@@ -23,6 +27,9 @@ add_executable(
     cayleyTests 
     ${test_files_SRC}
 )
+
+#Link against catch2
+target_link_libraries(cayleyTests PRIVATE Catch2::Catch2WithMain)
 
 #add tests
 add_test(
